Fix poster alignment on phone

--- a/src/app/movies/movies.component.scss
+++ b/src/app/movies/movies.component.scss
@@ -60,4 +60,7 @@ button {
     margin-left: 0;
     margin-top: 20px;
   }
+  .col {
+    flex-basis: auto;
+  }
 }
